--- a/style.css
+++ b/style.css
@@ -30,7 +30,25 @@ body {
   filter: blur(0.1vmin);
   background-image: radial-gradient(ellipse at top, transparent 0%, var(--dark-color)), radial-gradient(ellipse at bottom, var(--dark-color), rgba(145, 233, 255, 0.2)), repeating-linear-gradient(220deg, black 0px, black 19px, transparent 19px, transparent 22px), repeating-linear-gradient(189deg, black 0px, black 19px, transparent 19px, transparent 22px), repeating-linear-gradient(148deg, black 0px, black 19px, transparent 19px, transparent 22px), linear-gradient(90deg, #00fffa, #f0f0f0);
 }
-
+.container{display: inline-block;}
+.text{
+    color: white;
+    font-size: 5em;
+letter-spacing: 10px;
+font-family: monospace;
+border-right: 5px solid;
+width: 100%;
+white-space: nowrap;
+overflow: hidden;
+animation: typing 2s steps(18);
+cursor: .4s step-end infinite alternate;
+}
+@keyframes cursor{
+    50% { border-color: transparent}
+}
+@keyframes typing{
+    from {width: 0}
+}
 .flowers {
   position: relative;
   transform: scale(0.7);
