--- a/style.css
+++ b/style.css
@@ -31,9 +31,21 @@ body {
   background-image: radial-gradient(ellipse at top, transparent 0%, var(--dark-color)), radial-gradient(ellipse at bottom, var(--dark-color), rgba(145, 233, 255, 0.2)), repeating-linear-gradient(220deg, black 0px, black 19px, transparent 19px, transparent 22px), repeating-linear-gradient(189deg, black 0px, black 19px, transparent 19px, transparent 22px), repeating-linear-gradient(148deg, black 0px, black 19px, transparent 19px, transparent 22px), linear-gradient(90deg, #00fffa, #f0f0f0);
 }
 .container{display: inline-block;}
+
+@media screen and (min-width: 601px) {
+.text {
+  font-size: 80px;
+}
+}
+
+@media screen and (max-width: 600px) {
+.text {
+  font-size: 30px;
+}
+}
 .text{
     color: white;
-    font-size: 5em;
+    font-size: 5vw;
 letter-spacing: 10px;
 font-family: monospace;
 border-right: 5px solid;
