--- a/style.css
+++ b/style.css
@@ -46,7 +46,25 @@ body {
     color: white;
     font-size: 5vw;
 letter-spacing: 10px;
-font-family: monospace;
+font-family: Love_Light;
+border-right: 5px solid;
+width: 100%;
+white-space: nowrap;
+overflow: hidden;
+animation: typing 2s steps(18);
+cursor: .4s step-end infinite alternate;
+}
+@keyframes cursor{
+    50% { border-color: transparent}
+}
+@keyframes typing{
+    from {width: 0}
+}
+.text1{
+    color: white;
+    font-size: 5vw;
+letter-spacing: 10px;
+font-family: Love_Light;
 border-right: 5px solid;
 width: 100%;
 white-space: nowrap;
